Add portfolio page and add portfolio link in header.hbs

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,4 +3,5 @@
     <a href="/">help</a>
     <a href="/about">about</a>
     <a href="/index">index</a>
+    <a href="/projects">projects</a>
 </header>
